tinyC/version1.0/y.output
语法

    0 $accept: Program $end

    1 Program: %empty
    2        | Program FuncDecl

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls Stmts '}'

    4 RetType: T_Int
    5        | T_Void

    6 FuncName: T_Identifier

    7 Args: %empty
    8     | _Args

    9 _Args: T_Int T_Identifier
   10      | _Args ',' T_Int T_Identifier

   11 VarDecls: %empty
   12         | VarDecls VarDecl ';'

   13 VarDecl: T_Int T_Identifier
   14        | VarDecl ',' T_Identifier

   15 Stmts: %empty
   16      | Stmts Stmt

   17 Stmt: AssignStmt
   18     | PrintStmt
   19     | CallStmt
   20     | ReturnStmt
   21     | IfStmt
   22     | WhileStmt
   23     | BreakStmt
   24     | ContinueStmt

   25 AssignStmt: T_Identifier '=' Expr ';'

   26 PrintStmt: T_Print '(' T_StringConstant PActuals ')' ';'

   27 PActuals: %empty
   28         | PActuals ',' Expr

   29 CallStmt: CallExpr ';'

   30 CallExpr: T_Identifier '(' Actuals ')'

   31 Actuals: %empty
   32        | Expr PActuals

   33 ReturnStmt: T_Return Expr ';'
   34           | T_Return ';'

   35 IfStmt: If TestExpr Then StmtsBlock EndThen EndIf
   36       | If TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf

   37 TestExpr: '(' Expr ')'

   38 StmtsBlock: '{' Stmts '}'

   39 If: T_If

   40 Then: %empty

   41 EndThen: %empty

   42 Else: T_Else

   43 EndIf: %empty

   44 WhileStmt: While TestExpr Do StmtsBlock EndWhile

   45 While: T_While

   46 Do: %empty

   47 EndWhile: %empty

   48 BreakStmt: T_Break ';'

   49 ContinueStmt: T_Continue ';'

   50 Expr: Expr '+' Expr
   51     | Expr '-' Expr
   52     | Expr '*' Expr
   53     | Expr '/' Expr
   54     | Expr '%' Expr
   55     | Expr '>' Expr
   56     | Expr '<' Expr
   57     | Expr T_Ge Expr
   58     | Expr T_Le Expr
   59     | Expr T_Eq Expr
   60     | Expr T_Ne Expr
   61     | Expr T_Or Expr
   62     | Expr T_And Expr
   63     | '-' Expr
   64     | '!' Expr
   65     | T_IntConstant
   66     | T_Identifier
   67     | ReadInt
   68     | CallExpr
   69     | '(' Expr ')'

   70 ReadInt: T_ReadInt '(' T_StringConstant ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 64
'%' (37) 54
'(' (40) 3 26 30 37 69 70
')' (41) 3 26 30 37 69 70
'*' (42) 52
'+' (43) 50
',' (44) 10 14 28
'-' (45) 51 63
'/' (47) 53
';' (59) 12 25 26 29 33 34 48 49
'<' (60) 56
'=' (61) 25
'>' (62) 55
'{' (123) 3 38
'}' (125) 3 38
error (256)
T_Int (258) 4 9 10 13
T_Void (259) 5
T_Return (260) 33 34
T_Print (261) 26
T_ReadInt (262) 70
T_While (263) 45
T_If (264) 39
T_Else (265) 42
T_Break (266) 48
T_Continue (267) 49
T_Le (268) 58
T_Ge (269) 57
T_Eq (270) 59
T_Ne (271) 60
T_And (272) 62
T_Or (273) 61
T_IntConstant (274) 65
T_StringConstant (275) 26 70
T_Identifier (276) 6 9 10 13 14 25 30 66


Nonterminals, with rules where they appear

$accept (37)
    左： 0
Program (38)
    左： 1 2, 右： 0 2
FuncDecl (39)
    左： 3, 右： 2
RetType (40)
    左： 4 5, 右： 3
FuncName (41)
    左： 6, 右： 3
Args (42)
    左： 7 8, 右： 3
_Args (43)
    左： 9 10, 右： 8 10
VarDecls (44)
    左： 11 12, 右： 3 12
VarDecl (45)
    左： 13 14, 右： 12 14
Stmts (46)
    左： 15 16, 右： 3 16 38
Stmt (47)
    左： 17 18 19 20 21 22 23 24, 右： 16
AssignStmt (48)
    左： 25, 右： 17
PrintStmt (49)
    左： 26, 右： 18
PActuals (50)
    左： 27 28, 右： 26 28 32
CallStmt (51)
    左： 29, 右： 19
CallExpr (52)
    左： 30, 右： 29 68
Actuals (53)
    左： 31 32, 右： 30
ReturnStmt (54)
    左： 33 34, 右： 20
IfStmt (55)
    左： 35 36, 右： 21
TestExpr (56)
    左： 37, 右： 35 36 44
StmtsBlock (57)
    左： 38, 右： 35 36 44
If (58)
    左： 39, 右： 35 36
Then (59)
    左： 40, 右： 35 36
EndThen (60)
    左： 41, 右： 35 36
Else (61)
    左： 42, 右： 36
EndIf (62)
    左： 43, 右： 35 36
WhileStmt (63)
    左： 44, 右： 22
While (64)
    左： 45, 右： 44
Do (65)
    左： 46, 右： 44
EndWhile (66)
    左： 47, 右： 44
BreakStmt (67)
    左： 48, 右： 23
ContinueStmt (68)
    左： 49, 右： 24
Expr (69)
    左： 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69, 右： 25 28 32 33 37 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 69
ReadInt (70)
    左： 70, 右： 67


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  转到状态 1


State 1

    0 $accept: Program . $end
    2 Program: Program . FuncDecl

    $end    shift, and go to state 2
    T_Int   shift, and go to state 3
    T_Void  shift, and go to state 4

    FuncDecl  转到状态 5
    RetType   转到状态 6


State 2

    0 $accept: Program $end .

    $default  接受


State 3

    4 RetType: T_Int .

    $default  reduce using rule 4 (RetType)


State 4

    5 RetType: T_Void .

    $default  reduce using rule 5 (RetType)


State 5

    2 Program: Program FuncDecl .

    $default  reduce using rule 2 (Program)


State 6

    3 FuncDecl: RetType . FuncName '(' Args ')' '{' VarDecls Stmts '}'

    T_Identifier  shift, and go to state 7

    FuncName  转到状态 8


State 7

    6 FuncName: T_Identifier .

    $default  reduce using rule 6 (FuncName)


State 8

    3 FuncDecl: RetType FuncName . '(' Args ')' '{' VarDecls Stmts '}'

    '('  shift, and go to state 9


State 9

    3 FuncDecl: RetType FuncName '(' . Args ')' '{' VarDecls Stmts '}'

    T_Int  shift, and go to state 10

    $default  reduce using rule 7 (Args)

    Args   转到状态 11
    _Args  转到状态 12


State 10

    9 _Args: T_Int . T_Identifier

    T_Identifier  shift, and go to state 13


State 11

    3 FuncDecl: RetType FuncName '(' Args . ')' '{' VarDecls Stmts '}'

    ')'  shift, and go to state 14


State 12

    8 Args: _Args .
   10 _Args: _Args . ',' T_Int T_Identifier

    ','  shift, and go to state 15

    $default  reduce using rule 8 (Args)


State 13

    9 _Args: T_Int T_Identifier .

    $default  reduce using rule 9 (_Args)


State 14

    3 FuncDecl: RetType FuncName '(' Args ')' . '{' VarDecls Stmts '}'

    '{'  shift, and go to state 16


State 15

   10 _Args: _Args ',' . T_Int T_Identifier

    T_Int  shift, and go to state 17


State 16

    3 FuncDecl: RetType FuncName '(' Args ')' '{' . VarDecls Stmts '}'

    $default  reduce using rule 11 (VarDecls)

    VarDecls  转到状态 18


State 17

   10 _Args: _Args ',' T_Int . T_Identifier

    T_Identifier  shift, and go to state 19


State 18

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls . Stmts '}'
   12 VarDecls: VarDecls . VarDecl ';'

    T_Int  shift, and go to state 20

    $default  reduce using rule 15 (Stmts)

    VarDecl  转到状态 21
    Stmts    转到状态 22


State 19

   10 _Args: _Args ',' T_Int T_Identifier .

    $default  reduce using rule 10 (_Args)


State 20

   13 VarDecl: T_Int . T_Identifier

    T_Identifier  shift, and go to state 23


State 21

   12 VarDecls: VarDecls VarDecl . ';'
   14 VarDecl: VarDecl . ',' T_Identifier

    ','  shift, and go to state 24
    ';'  shift, and go to state 25


State 22

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls Stmts . '}'
   16 Stmts: Stmts . Stmt

    T_Return      shift, and go to state 26
    T_Print       shift, and go to state 27
    T_While       shift, and go to state 28
    T_If          shift, and go to state 29
    T_Break       shift, and go to state 30
    T_Continue    shift, and go to state 31
    T_Identifier  shift, and go to state 32
    '}'           shift, and go to state 33

    Stmt          转到状态 34
    AssignStmt    转到状态 35
    PrintStmt     转到状态 36
    CallStmt      转到状态 37
    CallExpr      转到状态 38
    ReturnStmt    转到状态 39
    IfStmt        转到状态 40
    If            转到状态 41
    WhileStmt     转到状态 42
    While         转到状态 43
    BreakStmt     转到状态 44
    ContinueStmt  转到状态 45


State 23

   13 VarDecl: T_Int T_Identifier .

    $default  reduce using rule 13 (VarDecl)


State 24

   14 VarDecl: VarDecl ',' . T_Identifier

    T_Identifier  shift, and go to state 46


State 25

   12 VarDecls: VarDecls VarDecl ';' .

    $default  reduce using rule 12 (VarDecls)


State 26

   33 ReturnStmt: T_Return . Expr ';'
   34           | T_Return . ';'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53

    CallExpr  转到状态 54
    Expr      转到状态 55
    ReadInt   转到状态 56


State 27

   26 PrintStmt: T_Print . '(' T_StringConstant PActuals ')' ';'

    '('  shift, and go to state 57


State 28

   45 While: T_While .

    $default  reduce using rule 45 (While)


State 29

   39 If: T_If .

    $default  reduce using rule 39 (If)


State 30

   48 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 58


State 31

   49 ContinueStmt: T_Continue . ';'

    ';'  shift, and go to state 59


State 32

   25 AssignStmt: T_Identifier . '=' Expr ';'
   30 CallExpr: T_Identifier . '(' Actuals ')'

    '='  shift, and go to state 60
    '('  shift, and go to state 61


State 33

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls Stmts '}' .

    $default  reduce using rule 3 (FuncDecl)


State 34

   16 Stmts: Stmts Stmt .

    $default  reduce using rule 16 (Stmts)


State 35

   17 Stmt: AssignStmt .

    $default  reduce using rule 17 (Stmt)


State 36

   18 Stmt: PrintStmt .

    $default  reduce using rule 18 (Stmt)


State 37

   19 Stmt: CallStmt .

    $default  reduce using rule 19 (Stmt)


State 38

   29 CallStmt: CallExpr . ';'

    ';'  shift, and go to state 62


State 39

   20 Stmt: ReturnStmt .

    $default  reduce using rule 20 (Stmt)


State 40

   21 Stmt: IfStmt .

    $default  reduce using rule 21 (Stmt)


State 41

   35 IfStmt: If . TestExpr Then StmtsBlock EndThen EndIf
   36       | If . TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf

    '('  shift, and go to state 63

    TestExpr  转到状态 64


State 42

   22 Stmt: WhileStmt .

    $default  reduce using rule 22 (Stmt)


State 43

   44 WhileStmt: While . TestExpr Do StmtsBlock EndWhile

    '('  shift, and go to state 63

    TestExpr  转到状态 65


State 44

   23 Stmt: BreakStmt .

    $default  reduce using rule 23 (Stmt)


State 45

   24 Stmt: ContinueStmt .

    $default  reduce using rule 24 (Stmt)


State 46

   14 VarDecl: VarDecl ',' T_Identifier .

    $default  reduce using rule 14 (VarDecl)


State 47

   70 ReadInt: T_ReadInt . '(' T_StringConstant ')'

    '('  shift, and go to state 66


State 48

   65 Expr: T_IntConstant .

    $default  reduce using rule 65 (Expr)


State 49

   30 CallExpr: T_Identifier . '(' Actuals ')'
   66 Expr: T_Identifier .

    '('  shift, and go to state 61

    $default  reduce using rule 66 (Expr)


State 50

   63 Expr: '-' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 67
    ReadInt   转到状态 56


State 51

   64 Expr: '!' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 68
    ReadInt   转到状态 56


State 52

   69 Expr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 69
    ReadInt   转到状态 56


State 53

   34 ReturnStmt: T_Return ';' .

    $default  reduce using rule 34 (ReturnStmt)


State 54

   68 Expr: CallExpr .

    $default  reduce using rule 68 (Expr)


State 55

   33 ReturnStmt: T_Return Expr . ';'
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ';'    shift, and go to state 83


State 56

   67 Expr: ReadInt .

    $default  reduce using rule 67 (Expr)


State 57

   26 PrintStmt: T_Print '(' . T_StringConstant PActuals ')' ';'

    T_StringConstant  shift, and go to state 84


State 58

   48 BreakStmt: T_Break ';' .

    $default  reduce using rule 48 (BreakStmt)


State 59

   49 ContinueStmt: T_Continue ';' .

    $default  reduce using rule 49 (ContinueStmt)


State 60

   25 AssignStmt: T_Identifier '=' . Expr ';'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 85
    ReadInt   转到状态 56


State 61

   30 CallExpr: T_Identifier '(' . Actuals ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    $default  reduce using rule 31 (Actuals)

    CallExpr  转到状态 54
    Actuals   转到状态 86
    Expr      转到状态 87
    ReadInt   转到状态 56


State 62

   29 CallStmt: CallExpr ';' .

    $default  reduce using rule 29 (CallStmt)


State 63

   37 TestExpr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 88
    ReadInt   转到状态 56


State 64

   35 IfStmt: If TestExpr . Then StmtsBlock EndThen EndIf
   36       | If TestExpr . Then StmtsBlock EndThen Else StmtsBlock EndIf

    $default  reduce using rule 40 (Then)

    Then  转到状态 89


State 65

   44 WhileStmt: While TestExpr . Do StmtsBlock EndWhile

    $default  reduce using rule 46 (Do)

    Do  转到状态 90


State 66

   70 ReadInt: T_ReadInt '(' . T_StringConstant ')'

    T_StringConstant  shift, and go to state 91


State 67

   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   63     | '-' Expr .

    $default  reduce using rule 63 (Expr)


State 68

   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   64     | '!' Expr .

    $default  reduce using rule 64 (Expr)


State 69

   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   69     | '(' Expr . ')'

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ')'    shift, and go to state 92


State 70

   58 Expr: Expr T_Le . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 93
    ReadInt   转到状态 56


State 71

   57 Expr: Expr T_Ge . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 94
    ReadInt   转到状态 56


State 72

   59 Expr: Expr T_Eq . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 95
    ReadInt   转到状态 56


State 73

   60 Expr: Expr T_Ne . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 96
    ReadInt   转到状态 56


State 74

   62 Expr: Expr T_And . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 97
    ReadInt   转到状态 56


State 75

   61 Expr: Expr T_Or . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 98
    ReadInt   转到状态 56


State 76

   56 Expr: Expr '<' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 99
    ReadInt   转到状态 56


State 77

   55 Expr: Expr '>' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 100
    ReadInt   转到状态 56


State 78

   50 Expr: Expr '+' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 101
    ReadInt   转到状态 56


State 79

   51 Expr: Expr '-' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 102
    ReadInt   转到状态 56


State 80

   52 Expr: Expr '*' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 103
    ReadInt   转到状态 56


State 81

   53 Expr: Expr '/' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 104
    ReadInt   转到状态 56


State 82

   54 Expr: Expr '%' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  转到状态 54
    Expr      转到状态 105
    ReadInt   转到状态 56


State 83

   33 ReturnStmt: T_Return Expr ';' .

    $default  reduce using rule 33 (ReturnStmt)


State 84

   26 PrintStmt: T_Print '(' T_StringConstant . PActuals ')' ';'

    $default  reduce using rule 27 (PActuals)

    PActuals  转到状态 106


State 85

   25 AssignStmt: T_Identifier '=' Expr . ';'
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ';'    shift, and go to state 107


State 86

   30 CallExpr: T_Identifier '(' Actuals . ')'

    ')'  shift, and go to state 108


State 87

   32 Actuals: Expr . PActuals
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82

    $default  reduce using rule 27 (PActuals)

    PActuals  转到状态 109


State 88

   37 TestExpr: '(' Expr . ')'
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
